Add comprehensive Hero section documentation and updates
Added multiple detailed documentation files for the Hero section, including before/after comparisons, bilingual implementation guide, optimization summaries, and complete change logs. Updated Hero image asset, improved translations in both English and Bangla locale files, and enhanced the Hero component with optimizations for performance, accessibility, SEO, and professional UI/UX.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -113,11 +113,51 @@
     "contact": "যোগাযোগ"
   },
   "hero": {
-    "title": "সূর্যমুখী কিন্ডারগার্টেনে স্বাগতম",
-    "subtitle": "প্রাথমিক শিক্ষায় উৎকর্ষতা",
-    "description": "মানসম্পন্ন শিক্ষা, অভিজ্ঞ শিক্ষক এবং নিরাপদ শিক্ষার পরিবেশের মাধ্যমে আপনার সন্তানের উজ্জ্বল ভবিষ্যতের জন্য কোমলমতি শিশুদের লালন-পালন।",
-    "enrollNow": "এখনই ভর্তি হন",
-    "learnMore": "আরও জানুন",
+    "slide1": {
+      "title": "সূর্যমুখী কিন্ডারগার্টেন",
+      "subtitle": "শিক্ষাই জাতির মেরুদণ্ড",
+      "description": "২০০৪ সাল থেকে নার্সারি থেকে পঞ্চম শ্রেণী পর্যন্ত মানসম্পন্ন বাংলা মাধ্যম শিক্ষা। সৃজনশীল, নৈতিক ও মূল্যবোধ ভিত্তিক শিক্ষার মাধ্যমে প্রগতিশীল সমাজ গঠন।",
+      "primaryCta": "ভর্তির জন্য আবেদন করুন",
+      "secondaryCta": "আরও জানুন",
+      "imageAlt": "সূর্যমুখী কিন্ডারগার্টেন - ২০০৪ সাল থেকে আওনা, নবাবগঞ্জ, ঢাকায় বাংলা মাধ্যম প্রাথমিক বিদ্যালয়",
+      "primaryAriaLabel": "সূর্যমুখী কিন্ডারগার্টেনে ভর্তির জন্য আবেদন করুন",
+      "secondaryAriaLabel": "সূর্যমুখী কিন্ডারগার্টেন সম্পর্কে আরও জানুন"
+    },
+    "slide2": {
+      "title": "বাংলা মাধ্যমে উৎকর্ষতা",
+      "subtitle": "নার্সারি থেকে পঞ্চম শ্রেণী",
+      "description": "সৃজনশীলতা, নৈতিক চরিত্র এবং মানবিক মূল্যবোধ বৃদ্ধিতে ব্যাপক বাংলা মাধ্যম পাঠ্যক্রম। আওনা, নবাবগঞ্জে আপনার দোরগোড়ায় আধুনিক শিক্ষা।",
+      "primaryCta": "ক্লাস দেখুন",
+      "secondaryCta": "আমাদের লক্ষ্য",
+      "imageAlt": "সূর্যমুখী কিন্ডারগার্টেনে নার্সারি থেকে পঞ্চম শ্রেণী পর্যন্ত বাংলা মাধ্যম শিক্ষা",
+      "primaryAriaLabel": "আমাদের ক্লাস প্রোগ্রাম এবং পাঠ্যক্রম দেখুন",
+      "secondaryAriaLabel": "আমাদের লক্ষ্য ও উদ্দেশ্য সম্পর্কে জানুন"
+    },
+    "slide3": {
+      "title": "সামগ্রিক উন্নয়ন",
+      "subtitle": "সংস্কৃতি, খেলাধুলা ও মূল্যবোধ",
+      "description": "নিয়মিত ক্রীড়া প্রতিযোগিতা, সাংস্কৃতিক অনুষ্ঠান, কাব স্কাউট এবং চরিত্র গঠন। ব্যাপক শিক্ষার মাধ্যমে সর্বাঙ্গীণ শিক্ষার্থী তৈরি।",
+      "primaryCta": "আজই ভর্তি হন",
+      "secondaryCta": "যোগাযোগ করুন",
+      "imageAlt": "সূর্যমুখী কিন্ডারগার্টেন ঢাকায় সৃজনশীল শিক্ষা, খেলাধুলা এবং সাংস্কৃতিক কার্যক্রম",
+      "primaryAriaLabel": "আজই ভর্তি প্রক্রিয়া শুরু করুন",
+      "secondaryAriaLabel": "অনুসন্ধানের জন্য আমাদের সাথে যোগাযোগ করুন"
+    },
+    "institutional": {
+      "eiin": "ইআইআইএন",
+      "institutionCode": "প্রতিষ্ঠান কোড",
+      "centerCode": "কেন্দ্র কোড",
+      "estdYear": "প্রতিষ্ঠা বছর",
+      "eiinDesc": "শিক্ষা প্রতিষ্ঠান সনাক্তকরণ নম্বর",
+      "institutionCodeDesc": "অফিসিয়াল প্রতিষ্ঠান কোড",
+      "centerCodeDesc": "কেন্দ্র সনাক্তকরণ কোড",
+      "estdYearDesc": "প্রতিষ্ঠার বছর",
+      "ariaLabel": "প্রতিষ্ঠানের তথ্য"
+    },
+    "loading": {
+      "text": "লোড হচ্ছে...",
+      "ariaLabel": "হিরো বিভাগ লোড হচ্ছে"
+    },
     "watchVideo": "ভিডিও দেখুন"
   },
   "teachers": {
@@ -943,13 +983,6 @@
     "title": "ডাউনলোড",
     "subtitle": "গুরুত্বপূর্ণ নথি এবং সম্পদ",
     "noDownloads": "এই মুহূর্তে কোনো ডাউনলোড উপলব্ধ নেই"
-  },
-  "hero": {
-    "title": "সূর্যমুখী কিন্ডারগার্টেনে স্বাগতম",
-    "subtitle": "২০০৪ সাল থেকে প্রাথমিক শিক্ষায় উৎকর্ষতা",
-    "description": "একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান যা নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত সৃজনশীল, নৈতিক ও সামগ্রিক উন্নয়নের উপর ফোকাস করে মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদান করে।",
-    "enrollNow": "ভর্তির জন্য আবেদন করুন",
-    "learnMore": "আরও জানুন"
   },
   "contact": {
     "title": "যোগাযোগ",
