Update contact info and upgrade @vercel/analytics
Replaces all instances of the old phone numbers and email addresses with the new contact details (phone: 01954113374, email: info.surjamukhikindergarten@gmail.com) across frontend pages, components, and localization files. Also updates @vercel/analytics to version 1.6.1 and changes its import path to use the new /react entry point.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -483,8 +483,8 @@
     "contact": {
       "title": "যোগাযোগের তথ্য",
       "address": "সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০",
-      "phone": "০১৮১৯১৯৮৯৬৫, ০১৭১১৫২৮০৪৫",
-      "email": "surjamukhikindergarten@gmail.com",
+      "phone": "০১৯৫৪১১৩৩৭৪",
+      "email": "info.surjamukhikindergarten@gmail.com",
       "website": "www.surjamukhikindergarten.com"
     },
     "stats": {
@@ -609,9 +609,9 @@
     "medium": "বাংলা মাধ্যম",
     "grades": "নার্সারি থেকে ৫ম শ্রেণী",
     "type": "বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান",
-    "phone1": "০১৮১৯১৯৮৯৬৫",
-    "phone2": "০১৭১১৫২৮০৪৫",
-    "email": "surjamukhikindergarten@gmail.com",
+    "phone1": "০১৯৫৪১১৩৩৭৪",
+    "phone2": "",
+    "email": "info.surjamukhikindergarten@gmail.com",
     "website": "www.surjamukhikindergarten.com",
     "currentStudents": "৫৫+",
     "totalGrades": "৬"
@@ -946,8 +946,8 @@
     "subtitle": "আমাদের সাথে যোগাযোগ করুন",
     "description": "আমরা সাহায্য করতে এবং আপনার যেকোনো প্রশ্নের উত্তর দিতে এখানে আছি।",
     "address": "সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০",
-    "phone": "০১৮১৯১৯৮৯৬৫, ০১৭১১৫২৮০৪৫",
-    "email": "surjamukhikindergarten@gmail.com",
+    "phone": "০১৯৫৪১১৩৩৭৪",
+    "email": "info.surjamukhikindergarten@gmail.com",
     "website": "www.surjamukhikindergarten.com",
     "form": {
       "title": "আমাদের একটি বার্তা পাঠান",
