--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -446,8 +446,8 @@
     "contact": {
       "title": "Contact Information",
       "address": "Salauddin Complex, Aona Bazar, Nawabganj, Dhaka-1320",
-      "phone": "01819198965, 01711528045",
-      "email": "surjamukhikindergarten@gmail.com",
+      "phone": "01954113374",
+      "email": "info.surjamukhikindergarten@gmail.com",
       "website": "www.surjamukhikindergarten.com"
     },
     "stats": {
@@ -469,9 +469,9 @@
       "medium": "Bangla Medium",
       "grades": "Nursery to Grade 5",
       "type": "Private Primary Educational Institution",
-      "phone1": "01819198965",
-      "phone2": "01711528045",
-      "email": "surjamukhikindergarten@gmail.com",
+      "phone1": "01954113374",
+      "phone2": "",
+      "email": "info.surjamukhikindergarten@gmail.com",
       "website": "www.surjamukhikindergarten.com",
       "currentStudents": "55+",
       "totalGrades": "6"
@@ -862,8 +862,8 @@
     "subtitle": "Get in touch with us",
     "description": "We're here to help and answer any questions you might have.",
     "address": "Salauddin Complex, Aona Bazar, Nawabganj, Dhaka-1320",
-    "phone": "01819198965, 01711528045",
-    "email": "surjamukhikindergarten@gmail.com",
+    "phone": "01954113374",
+    "email": "info.surjamukhikindergarten@gmail.com",
     "website": "www.surjamukhikindergarten.com",
     "form": {
       "title": "Send us a message",
