Correct spelling of 'Surjomukhi' to 'Surjamukhi'
Updated all instances of 'Surjomukhi Kindergarten' to 'Surjamukhi Kindergarten' in the English locale file for consistency and accuracy.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "common": {
-    "schoolName": "Surjomukhi Kindergarten",
+    "schoolName": "Surjamukhi Kindergarten",
     "tagline": "Excellence in Early Education",
     "home": "Home",
     "about": "About",
@@ -114,14 +114,14 @@
   },
   "hero": {
     "slide1": {
-      "title": "Surjomukhi Kindergarten",
+      "title": "Surjamukhi Kindergarten",
       "subtitle": "Education is the Backbone of the Nation",
       "description": "Quality Bangla medium education from Nursery to Grade 5 since 2004. Building a progressive society through creative, ethical, and value-based learning.",
       "primaryCta": "Apply for Admission",
       "secondaryCta": "Learn More",
-      "imageAlt": "Surjomukhi Kindergarten - Bangla medium primary school in Aona, Nawabganj, Dhaka since 2004",
-      "primaryAriaLabel": "Apply for admission to Surjomukhi Kindergarten",
-      "secondaryAriaLabel": "Learn more about Surjomukhi Kindergarten"
+      "imageAlt": "Surjamukhi Kindergarten - Bangla medium primary school in Aona, Nawabganj, Dhaka since 2004",
+      "primaryAriaLabel": "Apply for admission to Surjamukhi Kindergarten",
+      "secondaryAriaLabel": "Learn more about Surjamukhi Kindergarten"
     },
     "slide2": {
       "title": "Bangla Medium Excellence",
@@ -129,7 +129,7 @@
       "description": "Comprehensive Bangla medium curriculum fostering creativity, moral character, and human values. Modern education at your doorstep in Aona, Nawabganj.",
       "primaryCta": "View Classes",
       "secondaryCta": "Our Mission",
-      "imageAlt": "Bangla medium education from Nursery to Grade 5 at Surjomukhi Kindergarten",
+      "imageAlt": "Bangla medium education from Nursery to Grade 5 at Surjamukhi Kindergarten",
       "primaryAriaLabel": "View our class programs and curriculum",
       "secondaryAriaLabel": "Learn about our mission and vision"
     },
@@ -139,7 +139,7 @@
       "description": "Regular sports competitions, cultural programs, Cub Scouts, and character building. Creating well-rounded students through comprehensive education.",
       "primaryCta": "Enroll Today",
       "secondaryCta": "Contact Us",
-      "imageAlt": "Creative education, sports, and cultural programs at Surjomukhi Kindergarten Dhaka",
+      "imageAlt": "Creative education, sports, and cultural programs at Surjamukhi Kindergarten Dhaka",
       "primaryAriaLabel": "Start enrollment process today",
       "secondaryAriaLabel": "Contact us for inquiries"
     },
@@ -201,14 +201,14 @@
     "email": "Email",
     "description": "Providing quality education and nurturing young minds for a brighter future. Our commitment to excellence in education has been our hallmark for decades.",
     "allRightsReserved": "All rights reserved",
-    "copyright": "© 2024 Surjomukhi Kindergarten. All rights reserved.",
+    "copyright": "© 2024 Surjamukhi Kindergarten. All rights reserved.",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
     "establishedSince": "Established since 2010"
   },
   "newsletter": {
     "title": "Stay Updated",
-    "description": "Subscribe to our newsletter for the latest news, events, and updates from Surjomukhi Kindergarten.",
+    "description": "Subscribe to our newsletter for the latest news, events, and updates from Surjamukhi Kindergarten.",
     "emailLabel": "Email address",
     "emailPlaceholder": "Enter your email address",
     "nameLabel": "Name (optional)",
@@ -325,9 +325,9 @@
     }
   },
   "about": {
-    "title": "About Surjomukhi Kindergarten",
+    "title": "About Surjamukhi Kindergarten",
     "subtitle": "A private primary educational institution established in 2004, fostering holistic development through creative and ethical education.",
-    "description": "Surjomukhi Kindergarten is a private primary educational institution established on 01-01-2004 and located at Salauddin Complex, Aona Bazar, Nawabganj, Dhaka-1320. The school offers instruction in the Bangla medium from play group up to Grade 5 and works to foster students' holistic development through creative and ethical education.",
+    "description": "Surjamukhi Kindergarten is a private primary educational institution established on 01-01-2004 and located at Salauddin Complex, Aona Bazar, Nawabganj, Dhaka-1320. The school offers instruction in the Bangla medium from play group up to Grade 5 and works to foster students' holistic development through creative and ethical education.",
     "ideals": {
       "title": "Our Ideals",
       "items": [
@@ -372,7 +372,7 @@
       "subtitle": "A journey of educational excellence since 2004.",
       "founded": {
         "title": "Established in 2004",
-        "description": "Surjomukhi Kindergarten was established on January 1, 2004, with a commitment to providing quality Bangla medium education from play group to Grade 5."
+        "description": "Surjamukhi Kindergarten was established on January 1, 2004, with a commitment to providing quality Bangla medium education from play group to Grade 5."
       },
       "growth": {
         "title": "Continuous Development",
@@ -480,16 +480,16 @@
       "aboutUs": {
         "title": "About Us",
         "subtitle": "Learn about our commitment to providing quality early childhood education",
-        "content": "Welcome to Surjomukhi Kindergarten, where we believe every child deserves the best start in their educational journey."
+        "content": "Welcome to Surjamukhi Kindergarten, where we believe every child deserves the best start in their educational journey."
       },
       "founders": {
         "title": "Our Founders",
         "subtitle": "Meet the visionary who established our kindergarten",
-        "description": "Surjomukhi Kindergarten is a private nursery-to-Grade 5 school established on January 1, 2004, located at Salauddin Complex, Aona Bazar, Nawabganj, Dhaka-1320. The school operates in Bangla medium and aims to provide creative, ethical, and holistic education.",
+        "description": "Surjamukhi Kindergarten is a private nursery-to-Grade 5 school established on January 1, 2004, located at Salauddin Complex, Aona Bazar, Nawabganj, Dhaka-1320. The school operates in Bangla medium and aims to provide creative, ethical, and holistic education.",
         "founder": {
           "name": "Sheikh Imran Mahmud",
           "title": "Founder & Proprietor",
-          "description": "The founder and main initiator of Surjomukhi Kindergarten, who also manages and signs official applications as proprietor or director. Under his leadership, the school has maintained its commitment to providing quality Bangla medium education with a focus on creative, ethical, and holistic development.",
+          "description": "The founder and main initiator of Surjamukhi Kindergarten, who also manages and signs official applications as proprietor or director. Under his leadership, the school has maintained its commitment to providing quality Bangla medium education with a focus on creative, ethical, and holistic development.",
           "vision": "To create an educational institution that serves as the backbone of the nation through quality education, fostering peace, unity, and progress in the community.",
           "contact": {
             "mobile": "01819198965",
@@ -501,11 +501,11 @@
       "history": {
         "title": "Our History",
         "subtitle": "Discover our journey of educational excellence since 2004",
-        "description": "Surjomukhi Kindergarten began at the start of 2004 in Aona, Nawabganj, Dhaka. From its inception, the school has provided education for young children from nursery through Grade 5, prioritizing moral values, unity, peace, creativity, and progress.",
+        "description": "Surjamukhi Kindergarten began at the start of 2004 in Aona, Nawabganj, Dhaka. From its inception, the school has provided education for young children from nursery through Grade 5, prioritizing moral values, unity, peace, creativity, and progress.",
         "founding": {
           "year": "2004",
           "title": "The Beginning",
-          "description": "Surjomukhi Kindergarten was established on January 1, 2004, in Aona, Nawabganj, Dhaka, with a vision to provide quality Bangla medium education from nursery to Grade 5."
+          "description": "Surjamukhi Kindergarten was established on January 1, 2004, in Aona, Nawabganj, Dhaka, with a vision to provide quality Bangla medium education from nursery to Grade 5."
         },
         "ideals": {
           "title": "Founding Ideals",
@@ -583,7 +583,7 @@
       },
       "hero": {
         "title": "Apply Online",
-        "subtitle": "Complete your application for admission to Surjomukhi Kindergarten online."
+        "subtitle": "Complete your application for admission to Surjamukhi Kindergarten online."
       },
       "formTitle": "Online Application Form",
       "formSubtitle": "Please fill out all required fields carefully. You can save your progress and return later if needed.",
@@ -681,7 +681,7 @@
         },
         "termsAccepted": {
           "label": "I hereby declare that the information provided above is true and complete to the best of my knowledge. I understand that any false information may result in the rejection of this application.",
-          "linkText": "I agree to the admission policy and terms and conditions of Surjomukhi Kindergarten.",
+          "linkText": "I agree to the admission policy and terms and conditions of Surjamukhi Kindergarten.",
           "error": "You must accept the terms and conditions"
         }
       },
@@ -892,7 +892,7 @@
   },
   "gallery": {
     "title": "Photo Gallery",
-    "subtitle": "Glimpses of life at Surjomukhi Kindergarten",
+    "subtitle": "Glimpses of life at Surjamukhi Kindergarten",
     "noImages": "No images available at the moment"
   },
   "downloads": {
@@ -903,7 +903,7 @@
   "contact": {
     "title": "Contact Us",
     "subtitle": "Get in touch with us for admissions, inquiries, or any questions you may have.",
-    "description": "Contact Surjomukhi Kindergarten for admissions and inquiries"
+    "description": "Contact Surjamukhi Kindergarten for admissions and inquiries"
   },
   "classSchedule": {
     "title": "Class Schedule",
