Improve accessibility and update CTA labels sitewide
Added descriptive aria-labels to key navigation and call-to-action links for improved accessibility across frontend pages. Updated several CTA button texts (e.g., 'Learn More' to 'Contact Us' or 'View Details') for clarity and consistency. Adjusted robots.txt configuration and improved locale translations for both English and Bengali.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -118,7 +118,7 @@
       "subtitle": "শিক্ষাই জাতির মেরুদণ্ড",
       "description": "২০০৪ সাল থেকে নার্সারি থেকে পঞ্চম শ্রেণী পর্যন্ত মানসম্পন্ন বাংলা মাধ্যম শিক্ষা। সৃজনশীল, নৈতিক ও মূল্যবোধ ভিত্তিক শিক্ষার মাধ্যমে প্রগতিশীল সমাজ গঠন।",
       "primaryCta": "ভর্তির জন্য আবেদন করুন",
-      "secondaryCta": "আরও জানুন",
+      "secondaryCta": "আমাদের স্কুল দেখুন",
       "imageAlt": "সূর্যমুখী কিন্ডারগার্টেন - ২০০৪ সাল থেকে আওনা, নবাবগঞ্জ, ঢাকায় বাংলা মাধ্যম প্রাথমিক বিদ্যালয়",
       "primaryAriaLabel": "সূর্যমুখী কিন্ডারগার্টেনে ভর্তির জন্য আবেদন করুন",
       "secondaryAriaLabel": "সূর্যমুখী কিন্ডারগার্টেন সম্পর্কে আরও জানুন"
