--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,10 +118,10 @@
       "subtitle": "Education is the Backbone of the Nation",
       "description": "Quality Bangla medium education from Nursery to Grade 5 since 2004. Building a progressive society through creative, ethical, and value-based learning.",
       "primaryCta": "Apply for Admission",
-      "secondaryCta": "Learn More",
+      "secondaryCta": "Discover Our School",
       "imageAlt": "Surjamukhi Kindergarten - Bangla medium primary school in Aona, Nawabganj, Dhaka since 2004",
       "primaryAriaLabel": "Apply for admission to Surjamukhi Kindergarten",
-      "secondaryAriaLabel": "Learn more about Surjamukhi Kindergarten"
+      "secondaryAriaLabel": "Discover more about Surjamukhi Kindergarten"
     },
     "slide2": {
       "title": "Bangla Medium Excellence",
