Internationalize gallery marquee and optimize animation
GalleryMarquee now uses translation keys for all visible text, with new keys added to bn.json and en.json. Marquee animation is optimized for smoothness and accessibility, and GalleryCard image loading is improved for performance. Minor refactoring in upload API for file extension handling.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -976,6 +976,11 @@
   },
   "gallery": {
     "title": "ছবির গ্যালারি",
+    "badge": "ছবির গ্যালারি",
+    "headingPart1": "সোনালী",
+    "headingPart2": "মুহূর্তগুলি",
+    "description": "আমাদের ছোট্ট শিক্ষার্থীদের আনন্দ, শেখা এবং বেড়ে ওঠার স্মৃতি",
+    "viewFullGallery": "সব ছবি দেখুন",
     "subtitle": "সূর্যমুখী কিন্ডারগার্টেনের জীবনের ঝলক",
     "noImages": "এই মুহূর্তে কোনো ছবি উপলব্ধ নেই"
   },
